src/main/resources/mongo-demo-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-mongo-service
spec:
  selector:
    app: spring-mongo-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-mongo-service
spec:
  selector:
      matchLabels:
        app: spring-mongo-service
  replicas: 2
  template:
    metadata:
      labels:
        app: spring-mongo-service
    spec:
      containers:
        - name: spring-mongo-service
          image: mongo-demo:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
