src/main/resources/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mydemo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-mongo-service
                port:
                  number: 8080
